@startuml resetpassword-class
package django.forms {
    class Form
}

package django.db.models {
    class Model
}

package forms {
    class UserForm {
        username
    }
    class UserPass {
        password1
        password2
    }
    class UserCode {
        usercode
    }

    UserForm --|> Form
    UserPass --|> Form
    UserCode --|> Form
}

package models {
    class ConfirmString
    class User
    ConfirmString --|> Model
    User --|> Model
}

class ConfirmString{
    code
    user
    c_time
    __str__():str
}

class User{
    gender:choice
    name:models.CharField
    password:models.CharField
    email:models.EmailField
    c_time:models.DateField
    +__str__():models.CharField
}

ConfirmString "1"--"1" User
UserCode -- ConfirmString
UserPass -- User
UserForm -- User
@enduml